--- a/s3/cors/index.html
+++ b/s3/cors/index.html
@@ -20,7 +20,7 @@
     </main>
     <script type="text/javascript">
       const xhr = new XMLHttpRequest();
-      xhr.open("POST", "curl -X POST -H "Content-Type: application/json" https://szhxcpogfh.execute-api.ap-south-1.amazonaws.com/prod/hello", true);
+      xhr.open("POST", "https://szhxcpogfh.execute-api.ap-south-1.amazonaws.com/prod/hello", true);
       // Send the proper header information along with the request
       xhr.setRequestHeader("Content-Type", "application/json");
       xhr.onreadystatechange = () => {
